--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
 
   <body style="background-size:cover;background-position:center;"><audio loop="" preload="auto" id="audio">
-    <source src="media/Slipknot.mp4.mp4" type="audio/mpeg">
+    <source src="media/slipk.mp4" type="audio/mpeg">
   </audio>
 
   <input type="checkbox" autocomplete="off" id="overlay-toggle">
@@ -35,7 +35,7 @@
   
 
     <video autoplay="" loop="" muted="">
-        <source src="media/Slipknot.mp4.mp4">
+        <source src="media/slipk.mp4">
         Seu navegador não suporta vídeo.
     </video>
    
